--- a/blog/templates/blog_detail.html
+++ b/blog/templates/blog_detail.html
@@ -1,6 +1,12 @@
 {% extends "base.html" %}
 {% block page_content %}
 <div class="col-md-8 offset-md-2">
+        <br>
+        <a href="{% url 'blog_index' %}"
+        class="btn btn-primary">
+            Return to Blog Index
+        </a>
+        <br>
     <h1>{{ post.title }}</h1>
     <small>
         {{ post.created_on.date }} |&nbsp;
