--- a/personal_portfolio/templates/base.html
+++ b/personal_portfolio/templates/base.html
@@ -28,10 +28,10 @@
           <li class="nav-item {% if url_name == 'cv' %}active{% endif %}">
             <a class="nav-link" href="{% url 'cv' %}">CV</a>
           </li>
-          <li class="nav-item {% if url_name == 'blog_index' %}active{% endif %}">
+          <li class="nav-item {% if url_name == 'blog_index' %}active{% elif url_name == 'blog_detail' %}active{% endif %}">
             <a class="nav-link" href="{% url 'blog_index' %}">Blog</a>
           </li>
-          <li class="nav-item {% if url_name == 'project_index' %}active{% endif %}">
+          <li class="nav-item {% if url_name == 'project_index' %}active{% elif url_name == 'project_detail' %}active{% endif %}">
             <a class="nav-link" href="{% url 'project_index' %}">Projects</a>
           </li>
           <li class="nav-item {% if url_name == 'email' %}active{% endif %}">
@@ -54,4 +54,11 @@
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+  <script
+  src="https://code.jquery.com/jquery-3.4.1.js"
+  integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU="
+  crossorigin="anonymous"></script>
+  <script>
+    ('.same-height').matchHeight();
+  </script>
 </html>
