--- a/projects/templates/project_detail.html
+++ b/projects/templates/project_detail.html
@@ -2,17 +2,25 @@
 {% load static %}
 
 {% block page_content %}
-<h1>{{ project.title }}</h1>
-<div class="row">
-    <div class="col-md-8">
-        <img src="{% static project.image %}" alt="" width="100%">
-    </div>
-    <div class="col-md-4">
-        <h5>About the project:</h5>
-        <p>{{ project.description }}</p>
-        <br>
-        <h5>Technology used:</h5>
-        <p>{{ project.technology }}</p>
+<div class = container>
+    <br>
+    <a href="{% url 'project_index' %}"
+    class="btn btn-primary">
+        Return to Projects
+    </a>
+    <br>
+    <h1>{{ project.title }}</h1>
+    <div class="row">
+        <div class="col-md-8">
+            <img src="{% static project.image %}" alt="" width="100%">
+        </div>
+        <div class="col-md-4">
+            <h5>About the project:</h5>
+            <p>{{ project.description }}</p>
+            <br>
+            <h5>Techniques used:</h5>
+            <p>{{ project.technology }}</p>
+        </div>
     </div>
 </div>
 {% endblock %}
